--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.2'
@@ -22,7 +28,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.querydsl:querydsl-jpa'
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
@@ -34,18 +41,28 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+/*
+ * queryDSL 설정 추가
+ */
+// querydsl에서 사용할 경로 설정
 def querydslDir = "$buildDir/generated/querydsl"
-
+// JPA 사용 여부와 사용할 경로를 설정
 querydsl {
 	jpa = true
 	querydslSourcesDir = querydslDir
 }
+// build 시 사용할 sourceSet 추가
 sourceSets {
 	main.java.srcDir querydslDir
 }
-configurations {
-	querydsl.extendsFrom compileClasspath
-}
-compileQuerydsl {
+// querydsl 컴파일시 사용할 옵션 설정
+compileQuerydsl{
 	options.annotationProcessorPath = configurations.querydsl
+}
+// querydsl 이 compileClassPath 를 상속하도록 설정
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+	querydsl.extendsFrom compileClasspath
 }
